@@ -25,8 +25,8 @@
 # ***** modify the following variables according to your env *****
 #
 
-DFT_BIN=/sfs/sanfs/home/userinfm/cmpmopz3/espresso-2.1.3/bin
-TMPDIR=/scratch/cmpmopz3/Andrea/Test/WanT
+DFT_BIN=/home/ferretti/espresso-2.1.4/bin
+TMPDIR=/home/ferretti/scratch/WanT
 
 PARA_PREFIX=
 PARA_POSTFIX=
