@@ -7,6 +7,7 @@
 
 &SUBSPACE
    win_max = 19.78
+   froz_max = 13.6
    dimwann = 6
    maxiter_dis = 400
 /
